# Qoldproject

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
UntitledProject1/: UntitledProject1.qmlproject  UntitledProject1.qmlproject.qtds
UntitledProject1/UntitledProject1/: Constants.qml  DirectoryFontLoader.qml  EventListModel.qml  EventListSimulator.qml  qmldir
UntitledProject1/UntitledProject1/designer/: plugin.metainfo
UntitledProject1/UntitledProject1Content/: App.qml  Screen01.ui.qml
controllerTest/: QoldControl.cpp  QoldControl.h
